--- a/draft/Project_Draft.tex
+++ b/draft/Project_Draft.tex
@@ -365,8 +365,9 @@ x-ray images. We first measured the overall accuracy and precision of all 4
 classes of x-ray images (COVID-19 viral pneumonia, non-COVID-19 viral pneumonia,
 bacterial pneumonia and normal images).
 
-For each image class, F1 score is recorded For each class of images, the F1
-score is calculated to convey the balance between precision and recall.
+For each class of image, we record precision and recall values for each fold.
+We calculate F1-score for each fold and then average them to calculate the mean
+F1 score.
 
 We are evaluating the global base learners independently, the global ensemble,
 the patch-based learners independently and the patch-based ensemble.
@@ -400,7 +401,7 @@ shows the mask creation and applying the mask on the image.
 
 When reproducing the FLANNEL paper we used the same base models;  Densenet161,
 InceptionV3, Resnet152, ResneXt101 and Vgg19\_bn. These models were fine-tuned
-using the default parameter values, settings and by using the Adam optimizer. We
+using the default parameter settings and by using the Adam optimizer. We
 compared FLANNEL ensemble performance with the independent performance for each
 of the base models. The overall accuracy is not the appropriate measure for
 evaluation of the model due to the fact that our dataset is imbalanced in favor
@@ -450,8 +451,8 @@ performance, we will also measure timing performance to note how much of an
 impact the patch-based classification technique has on runtime.
 
 \section{Acknowledgement}
-GitHub source code for both FLANNEL and Patch-by-Patch classification \cite{pmid32396075}
-paper are used as baseline for this improvement.
+GitHub source code for both FLANNEL and Patch-by-Patch classification
+\cite{pmid32396075} paper are used as baseline for this improvement.
 \begin{itemize}
     \item \href{https://github.com/qxiaobu/FLANNEL}{FLANNEL GitHub Repository}
     \item \href{https://github.com/jongcye/Deep-Learning-COVID-19-on-CXR-using-Limited-Training-Data-Sets}
